# rusty_journal

./: .justfile  Cargo.toml  README.md  test.json
src/: cli.rs  main.rs  tasks.rs
