[package]
name = "rusty_journal"
version = "0.2.8"
edition = "2021"

[[bin]]
name = "rj"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
home = "0.5"
anyhow = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock","serde"]
